# Digit-recognition

./: .gitignore  pyproject.toml
source/: main.py
source/AI/: digitRecognition.py
