[tool.poetry]
name = "projet-py-KR"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.12"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
numpy = "2.0.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
